outputconfigurationstore: be more conservative with VGA displays

While choosing higher refresh rates is very safe with digital connections, it can be
quite risky with VGA and lead to the display not showing an image.

BUG: 512146